/*
 * $Id: ChangeLog,v 1.411 2002/09/29 05:13:59 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-30 12:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.sly
    + Added support for varaibales and functions by refernce as paramaters for IIF()

  * source/pp/ppcore.c
    * Formatting.

2002-09-29 12:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  * source/rtl/tget.prg
    ! fixed get (value and display) involving negative (with decimal)
      number whose value is less than 1.

2002-09-28 21:50 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/compiler/hbusage.c
        ! fixed a bug in the list of hb_compPrintCredits ;-)

2002-09-28 14:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/rtl/gtwin/gtwin.c
    * FWH GPF fixes provided by Przemyslaw Czerpak <druzus@polbox.com>.
      New, fixed version should work OK with FWH. Please note that old
      version of gtwin could produce random GPFs because of improper
      initialization when run with FWH.
      Again MANY THANKS to Przemek for his really amazing work.

2002-09-28 09:00 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/vm/itemapi.c
    * Fixed GPF when NaN values were converted to string (under linux)

2002-09-28 02:10 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
        ! fixed error reported by Gianni Santamarina.

2002-09-27 22:45 UTC+0100 Marek Paliwoda <paliwoda@inetia.pl>
  * source/rtl/gtwin/gtwin.c
    * New, highly optimized Windows console gt driver
      written by Przemyslaw Czerpak <druzus@polbox.com>
          (Many Thanks Przemek)

  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtcrs/gtcrs.c
  * source/rtl/gtdos/gtdos.c
  * source/rtl/gtos2/gtos2.c
  * source/rtl/gtpca/gtpca.c
  * source/rtl/gtstd/gtstd.c