@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.411 2002/09/29 05:13:59 andijahja Exp $
+ * $Id: ChangeLog,v 1.412 2002/09/30 07:26:27 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,7 +8,15 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
-2002-09-30 12:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+2002-09-30 14:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hberrors.h
+    + Added: #define HB_PP_ERR_TOO_MANY_MARKERS              20
+
+  * source/pp/ppcore.c
+    + Added logic for new fatal error: "Too many match markers in #translate or #command"
+    * Increased PATTERN_SIZE to 4096
+
+2002-09-30 00:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.sly
     + Added support for varaibales and functions by refernce as paramaters for IIF()
 
